Implemented actual api call and showed the result - implemented data layer - add keys in gradle - implemented paging source -minor ui changes - loading component creation

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=true
+BASE_URL=gateway.marvel.com:443
+PRIVATE_API_KEY=8fee23c381af9c2407864036310d8a8e99f95304
+PUBLIC_API_KEY=9e5363ffaaa75f2e334a08d305974269
